overlaping fixed

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ background: rgb(249, 246, 246);
   position: fixed; 
  top: 0;       
   width: 100%;
+  z-index: 9999;
 }
 
 @media only screen and (min-width:1px){
